quil-rs/src/instruction/snapshots/quil_rs__instruction__calibration__test_reset_calibration_definition__display@Effect With Fixed Qubit.snap
---
source: quil-rs/src/instruction/calibration.rs
expression: measure_cal_def.to_quil_or_debug()
---
DEFCAL RESET 0:
    X(pi) 0
